--- a/BioVitalAge/static/css/cartella_paziente/sezioni_storico/esami.css
+++ b/BioVitalAge/static/css/cartella_paziente/sezioni_storico/esami.css
@@ -419,6 +419,7 @@ span{
     background-color: white;
     width: 100%;
     height: 420px;
+    overflow: auto;
 }
 .content-modale-pacchetti .rowModale{
     display: flex;
