--- a/BioVitalAge/templates/includes/cartellaPaziente.html
+++ b/BioVitalAge/templates/includes/cartellaPaziente.html
@@ -107,7 +107,7 @@
 
                         <button title="Terapie" class="circle-btn" onclick="window.location.href='{% url 'terapie' persona.id %}'" >
                             <img src="{% static 'image/Terapie_colore.png' %}" alt="Prescrione certificati">
-                            <p style="margin-bottom: 0;">Terapie</p>
+                            <p style="margin-bottom: 0;">Terapia IV</p>
                         </button> 
 
                         <button onclick="window.location.href='{% url 'allegati' persona.id %}'" class="circle-btn" title="Allegati">
