--- a/BioVitalAge/templates/cartella_paziente/sezioni_storico/terapie.html
+++ b/BioVitalAge/templates/cartella_paziente/sezioni_storico/terapie.html
@@ -175,7 +175,7 @@
                   {% endfor %}
                 {% else %}
                   <tr class="no-terapie-row">
-                    <td colspan="4" class="text-center text-muted">Nessuna terapia in studio registrata.</td>
+                    <td colspan="4" class="text-center text-muted">Nessuna terapia registrata.</td>
                   </tr>
                 {% endif %}
               </tbody>
@@ -220,7 +220,7 @@
               </svg>
             </span>
 
-            Aggiungi Terapia in Studio
+            Aggiungi Terapia 
           </a>
 
         </div>
