--- a/BioVitalAge/templates/home_page/homePage.html
+++ b/BioVitalAge/templates/home_page/homePage.html
@@ -234,7 +234,7 @@
           </div>
         </form>
 
-        <a href="{% url 'inserisci_paziente' %}" title="Add Patient" class="button">
+        <a href="#" title="Add Patient" class="button">
 
             <span class="button__icon-wrapper">
 
