moidifiche cartella paziente

--- a/BioVitalAge/static/css/cartellaPaziente.css
+++ b/BioVitalAge/static/css/cartellaPaziente.css
@@ -50,7 +50,9 @@
 .side-navbar a:hover{
     background-color: var(--contrast-color);
 }
-
+.main-menu-trace{
+  justify-content: flex-start!important;
+}
 
 
 
